# Choose-your-opponent

./: CMakeLists.txt  DoubleTree.cpp  DoubleTree.h  ParseurMatrix.py  README.md  VectorTree.cpp  VectorTree.h  algo_to_python.cpp  comparealgos.py  get_result.py  graphic_user_interface.py  json.cpp  json.h  main.cpp  main.py  official.cpp  official.h  tirage_8e_8dec.py  tools.cpp  tools.h  vectortree.h
json_files/: Scenario-12-11-2021.txt  best_scenario-12-12-2021.txt  execute_info.txt  matrix-12-11-2021.txt  matrix-12-12-2010.txt  matrix-12-12-2011.txt  matrix-12-12-2012.txt  matrix-12-12-2013.txt  matrix-12-12-2014.txt  matrix-12-12-2015.txt  matrix-12-12-2016.txt  matrix-12-12-2017.txt  matrix-12-12-2018.txt  matrix-12-12-2019.txt  matrix-12-12-2020.txt  matrix-12-12-2021.txt  official_best_scenario-12-12-2015.txt  official_best_scenario-12-12-2020.txt  official_best_scenario-12-12-2021.txt  official_qs_vector-12-12-2010.txt  official_qs_vector-12-12-2011.txt  official_qs_vector-12-12-2012.txt  official_qs_vector-12-12-2013.txt  official_qs_vector-12-12-2014.txt  official_qs_vector-12-12-2015.txt  official_qs_vector-12-12-2016.txt  official_qs_vector-12-12-2017.txt  official_qs_vector-12-12-2018.txt  official_qs_vector-12-12-2019.txt  official_qs_vector-12-12-2020.txt  official_qs_vector-12-12-2021.txt  qs_vector-12-11-2021.txt  qs_vector-12-12-2010.txt  qs_vector-12-12-2011.txt  qs_vector-12-12-2012.txt  qs_vector-12-12-2013.txt  qs_vector-12-12-2014.txt  qs_vector-12-12-2015.txt  qs_vector-12-12-2016.txt  qs_vector-12-12-2017.txt  (+41 more)
